SimulationModel renamed to CalculatingSummaryStatistics

--- a/CalculatingSummaryStats.html
+++ b/CalculatingSummaryStats.html
@@ -25,7 +25,7 @@ body {
 
 <body>
 
-<h1 id="simulationmodel">SimulationModel</h1>
+<h1 id="calculatingsummarystats">CalculatingSummaryStats</h1>
 <p>Dan Murphy<br />August 17, 2016</p>
 <h2 id="overview">Overview</h2>
 <p>In this document, the runs from the year are first adjusted for track location, and then summarized which is used to simulate future results. Finially, the results of the simulation are summarized to provide the basis for the projection.</p>
